[gd_scene load_steps=32 format=3 uid="uid://5ti8gwrj7tha"]

[ext_resource type="Script" path="res://drone.gd" id="1_qapsr"]
[ext_resource type="PackedScene" uid="uid://be4q3x2kcbrn0" path="res://drone_import.tscn" id="2_ns1cx"]
[ext_resource type="Script" path="res://drone_sound.gd" id="3_f4ikt"]
[ext_resource type="AudioStream" uid="uid://1e03f26q15tj" path="res://import/drone_loop.wav" id="3_vses7"]
[ext_resource type="AudioStream" uid="uid://bkwflni7w84lm" path="res://import/Audio/forceField_004.ogg" id="5_pxt4h"]
[ext_resource type="AudioStream" uid="uid://ul3s6jsd6kwb" path="res://import/Audio/explosionCrunch_001.ogg" id="6_22p5i"]
[ext_resource type="PackedScene" uid="uid://b7c7w8tl7hh37" path="res://ingenuity_import.tscn" id="7_lkp43"]
[ext_resource type="PackedScene" uid="uid://dmuhcsl8wg0ug" path="res://drone_gun_import.tscn" id="8_si1r6"]

[sub_resource type="Gradient" id="Gradient_bwy5e"]
offsets = PackedFloat32Array(0, 0.754098)
colors = PackedColorArray(0.572669, 6.37732e-07, 1.92523e-07, 1, 0.721569, 0.403922, 0.341176, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_xde2m"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_icrxl"]
seamless = true
color_ramp = SubResource("Gradient_bwy5e")
noise = SubResource("FastNoiseLite_xde2m")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fpre2"]
albedo_texture = SubResource("NoiseTexture2D_icrxl")
metallic = 1.0
roughness = 0.56
emission_enabled = true

[sub_resource type="SphereMesh" id="SphereMesh_l06h7"]
radius = 0.08
height = 0.16

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_8d16w"]
dof_blur_far_enabled = true
dof_blur_far_distance = 300.0
dof_blur_far_transition = 50.0

[sub_resource type="BoxShape3D" id="BoxShape3D_n3w36"]
margin = 0.0
size = Vector3(0.12, 0.07, 0.12)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vpqhs"]
height = 0.07
radius = 0.068

[sub_resource type="SphereShape3D" id="SphereShape3D_xm54y"]
radius = 0.078

[sub_resource type="Gradient" id="Gradient_mn40e"]
offsets = PackedFloat32Array(0.349206, 0.801587)
colors = PackedColorArray(0, 0, 0, 1, 0, 0.513726, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_eb2hl"]
noise_type = 2
frequency = 0.059
fractal_octaves = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_54l47"]
color_ramp = SubResource("Gradient_mn40e")
noise = SubResource("FastNoiseLite_eb2hl")

[sub_resource type="Gradient" id="Gradient_ag4ii"]
offsets = PackedFloat32Array(0.31746, 1)
colors = PackedColorArray(0, 0, 0, 0.494118, 1, 1, 1, 0.482353)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5b7qt"]
noise_type = 2
frequency = 0.059
fractal_type = 2
fractal_octaves = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cl4px"]
seamless = true
color_ramp = SubResource("Gradient_ag4ii")
noise = SubResource("FastNoiseLite_5b7qt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kwupa"]
transparency = 1
albedo_color = Color(0.160784, 0.607843, 1, 0.360784)
metallic = 1.0
metallic_specular = 1.0
metallic_texture = SubResource("NoiseTexture2D_cl4px")
emission_enabled = true
emission_texture = SubResource("NoiseTexture2D_54l47")

[sub_resource type="SphereMesh" id="SphereMesh_p4g1r"]
lightmap_size_hint = Vector2i(4, 2)
material = SubResource("StandardMaterial3D_kwupa")
radius = 0.08
height = 0.071

[sub_resource type="Gradient" id="Gradient_r6e74"]
colors = PackedColorArray(0, 0, 0, 0.168627, 0, 0.490196, 1, 0.560784)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_gtohk"]
noise_type = 2
frequency = 0.0258
fractal_octaves = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cg1p3"]
width = 1347
height = 937
color_ramp = SubResource("Gradient_r6e74")
noise = SubResource("FastNoiseLite_gtohk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_isdd4"]
inherit_velocity_ratio = 0.008
velocity_pivot = Vector3(0, 0.5, 0)
direction = Vector3(0, 0.1, 0)
initial_velocity_max = 0.1
gravity = Vector3(0, 0, 0)
tangential_accel_max = 16.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_df4wr"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.415686)

[sub_resource type="SphereMesh" id="SphereMesh_jvigt"]
material = SubResource("StandardMaterial3D_df4wr")
radius = 0.12
height = 0.22

[node name="drone" type="RigidBody3D"]
mass = 0.22
angular_damp = 100.0
script = ExtResource("1_qapsr")

[node name="weckingball_skin" type="MeshInstance3D" parent="."]
visible = false
material_override = SubResource("StandardMaterial3D_fpre2")
mesh = SubResource("SphereMesh_l06h7")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.90747, -0.420117, 0, 0.420117, 0.90747, 0, -0.00257987, -0.00068361)
attributes = SubResource("CameraAttributesPractical_8d16w")
current = true

[node name="drone_gun" parent="Camera3D" instance=ExtResource("8_si1r6")]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0)

[node name="VoxelViewer" type="VoxelViewer" parent="Camera3D"]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_n3w36")

[node name="shoot_from" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0717006, -0.193481)

[node name="back_cam_mount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0227404, 0.231466)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.954543, 0, 0.298075, 0, 1, 0, -0.298075, 0, 0.954543, 0, 0, 0)
shape = SubResource("CylinderShape3D_vpqhs")

[node name="speedCollision" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_xm54y")

[node name="mesh" parent="." instance=ExtResource("2_ns1cx")]
transform = Transform3D(0.0314283, 0, 0.999506, 0, 1, 0, -0.999506, 0, 0.0314283, 0.000589579, -0.00212165, 0.00135947)

[node name="drone_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vses7")
volume_db = 5.306
autoplay = true
max_polyphony = 3
script = ExtResource("3_f4ikt")

[node name="AudioListener3D" type="AudioListener3D" parent="."]

[node name="shield" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_p4g1r")

[node name="shield_camera" type="Sprite2D" parent="shield"]
visible = false
position = Vector2(955.75, 539.25)
scale = Vector2(1.42428, 1.14781)
texture = SubResource("NoiseTexture2D_cg1p3")

[node name="shield_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pxt4h")

[node name="expload_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_22p5i")

[node name="expload_effect" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0188786, -0.000607304)
emitting = false
amount = 100
lifetime = 1.3
interp_to_end = 0.29
one_shot = true
explosiveness = 0.2
process_material = SubResource("ParticleProcessMaterial_isdd4")
draw_pass_1 = SubResource("SphereMesh_jvigt")

[node name="ingenuity_mesh" parent="." instance=ExtResource("7_lkp43")]
transform = Transform3D(0.145, 0, 0, 0, 0.145, 0, 0, 0, 0.145, 0, -0.0380199, 0)
visible = false

[connection signal="finished" from="drone_sound" to="drone_sound" method="_on_finished"]
